deploy/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: default
  namespace: compliance
spec:
  host: "*.compliance.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
