deploy/istio/intake-gateway-ab-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: intake-gateway-ab
  namespace: compliance
spec:
  hosts:
    - intake-gateway
  http:
    - match:
        - headers:
            x-experimental:
              exact: "true"
      route:
        - destination:
            host: intake-gateway-experimental
            port:
              number: 8000
    - route:
        - destination:
            host: intake-gateway-stable
            port:
              number: 8000
          weight: 90
        - destination:
            host: intake-gateway-experimental
            port:
              number: 8000
          weight: 10
